[package]
name = "irvers"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.53.1"

[features]
default = []
#nightly-features = ["nightly-features-benches"]
#nightly-features-benches = []

[lib]
name = "irve"
path = "lib/lib.rs"

[[bin]]
name = "irvers"
path = "src/main.rs"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
strip = true
overflow-checks = false
panic = "abort"
#lto = true#FIXME this causes the error: "error: failed to get bitcode from object file for LTO (Bitcode section not found in object file)"
lto = false

[profile.release-with-debug]
inherits = "release"
strip = false
overflow-checks = false
panic = "abort"
lto = false
debug = true

